force-app/main/default/objects/Opportunity/fields/Opty_Sales_Area__c.field-meta.xml
<CustomField>
    <fullName>Opty_Sales_Area__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Área de vendas</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AccountAreaSales__c.AccountLkp__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <filterItems>
            <field>AccountAreaSales__c.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Cliente Concorrência</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AccountAreaSales__c</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>