force-app/main/default/objects/Opportunity/fields/OrderAmountFml__c.field-meta.xml
<CustomField>
    <fullName>OrderAmountFml__c</fullName>
    <formula>IF((OrderLkp__c != null &amp;&amp; OrderLkp__r.PrimaryBln__c == true), OrderLkp__r.TotalPriceNmb__c, Amount)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Oportunidade</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>