force-app/main/default/objects/Opportunity/fields/OrderLkp__c.field-meta.xml
<CustomField>
    <fullName>OrderLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ordem Primária</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>