force-app/main/default/objects/Opportunity/fields/SellerCPFTxt__c.field-meta.xml
<CustomField>
    <fullName>SellerCPFTxt__c</fullName>
    <label>CPF do Vendedor</label>
    <length>18</length>
    <type>Text</type>
</CustomField>