force-app/main/default/objects/Opportunity/recordTypes/Bidim.recordType-meta.xml
<RecordType>
    <fullName>Bidim</fullName>
    <active>true</active>
    <businessProcess>Bidim</businessProcess>
    <label>Bidim</label>
</RecordType>