force-app/main/default/objects/Opportunity/recordTypes/Padr_o.recordType-meta.xml
<RecordType>
    <fullName>Padr_o</fullName>
    <active>true</active>
    <businessProcess>Padrão</businessProcess>
    <label>Padrão</label>
</RecordType>