force-app/main/default/objects/Opportunity/validationRules/CustomerRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>CustomerRequired</fullName>
    <active>true</active>
    <errorConditionFormula>Opty_Sales_Area__c = null</errorConditionFormula>
    <errorMessage>É necessário definir um cliente para a oportunidade.</errorMessage>
</ValidationRule>