force-app/main/default/objects/Opportunity/validationRules/InvalidCloseDate.validationRule-meta.xml
<ValidationRule>
    <fullName>InvalidCloseDate</fullName>
    <active>true</active>
    <errorConditionFormula>CloseDate &lt;  TODAY()</errorConditionFormula>
    <errorDisplayField>CloseDate</errorDisplayField>
    <errorMessage>Defina uma data futura de fechamento da oportunidade.</errorMessage>
</ValidationRule>