force-app/main/default/objects/Opportunity/validationRules/RTBidim.validationRule-meta.xml
<ValidationRule>
    <fullName>RTBidim</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName = &apos;Bidim&apos; &amp;&amp;  NOT(ISPICKVAL(Opty_Sales_Area__r.CodeSalesOrganizationTxt__c,&apos;0099&apos;))</errorConditionFormula>
    <errorMessage>Esse tipo de registro está disponível apenas para contas da Bidim</errorMessage>
</ValidationRule>